<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">大老二</string>
    <string name="str_singleGame">單人遊戲</string>
    <string name="str_multiGame">多人遊戲</string>
    <string name="str_startGame">開始遊戲</string>
    <string name="str_setting">遊戲設定</string>
    <string name="str_pIDDefault">0。unnamed</string>
    <string name="str_showGitHub"><u>APP原始碼(GitHub)</u></string>
    <string name="str_updateApp"><u>下載最新版本</u></string>
    <string name="str_showQRCode"><u>顯示最新版本QRCode</u></string>
    <string name="str_loadingDefault">等待玩家中…(-/4)</string>
    <string name="str_roomIDDefault">房間號碼：-</string>
    <string name="str_roomPlayerListDefault">玩家：-</string>
    <string name="str_btnTest1">進入牌桌</string>
    <string name="str_exitRoom">退出房間</string>
    <string name="str_shuffle">洗牌</string>

</resources>